--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
   <header class="relative flex items-center bg-blue-800 text-white p-6">
-    <img src="TU_LOGO_AQUI" alt="Logo Municipalidad" class="h-32 mr-6">
+    <img src="logo.png" alt="Logo Municipalidad" class="h-32 mr-6">
     <div>
       <h1 class="text-4xl font-bold">PLATAFORMA DE MONITOREO PME</h1>
       <p class="mt-2 text-lg">Selecciona la escuela para ver su plan de monitoreo</p>
