fix: fecha en formulario

--- a/FORMULARIOS GPT/Formulario San Francisco.html
+++ b/FORMULARIOS GPT/Formulario San Francisco.html
@@ -76,9 +76,9 @@
         dimension:"Gestión Pedagógica", sub:"Enseñanza y aprendizaje en el aula",
         tasks:[
           {code:"1.1",desc:"Actualización plan resolución de problemas",percent:"15%",verif:"Plan del año 2025",month:"Abril"},
-          {code:"1.2",desc:"Recopilación situaciones problemas ejes temáticos",percent:"15%",verif:"Banco de problemas",month:"Noviembre"},
-          {code:"1.3",desc:"Implementación sistemática en clases y talleres JEC",percent:"30%",verif:"Leccionario",month:"Noviembre"},
-          {code:"1.4",desc:"Estrategia MORA",percent:"20%",verif:"Leccionarios y cuadernos",month:"Noviembre"},
+          {code:"1.2",desc:"Recopilación situaciones problemas ejes temáticos",percent:"15%",verif:"Banco de problemas",month:"Mayo"},
+          {code:"1.3",desc:"Implementación sistemática en clases y talleres JEC",percent:"30%",verif:"Leccionario",month:"Mayo"},
+          {code:"1.4",desc:"Estrategia MORA",percent:"20%",verif:"Leccionarios y cuadernos",month:"Mayo"},
           {code:"1.5",desc:"Evaluación final del plan de resolución",percent:"20%",verif:"Acta de consejo de evaluación",month:"Diciembre"}
         ]
       },
@@ -86,11 +86,11 @@
         id:2, title:"Ejecutar estrategias de comprensión lectora y producción escrita",
         dimension:"Gestión Pedagógica", sub:"Enseñanza y aprendizaje en el aula",
         tasks:[
-          {code:"2.1",desc:"Cuaderno Viajero 1º y 2º ciclo",percent:"15%",verif:"Cuadernos",month:"Diciembre"},
-          {code:"2.2",desc:"Plan lector",percent:"30%",verif:"Evaluaciones de textos",month:"Diciembre"},
-          {code:"2.3",desc:"Lecturas diarias primera hora",percent:"15%",verif:"Leccionario",month:"Noviembre"},
-          {code:"2.4",desc:"Estrategia Método RICE",percent:"20%",verif:"Pautas aplicadas",month:"Noviembre"},
-          {code:"2.5",desc:"Cuadernos de Caligrafix",percent:"10%",verif:"Cuadernos Caligrafix",month:"Noviembre"}
+          {code:"2.1",desc:"Cuaderno Viajero 1º y 2º ciclo",percent:"15%",verif:"Cuadernos",month:"Mayo"},
+          {code:"2.2",desc:"Plan lector",percent:"30%",verif:"Evaluaciones de textos",month:"Mayo"},
+          {code:"2.3",desc:"Lecturas diarias primera hora",percent:"15%",verif:"Leccionario",month:"Junio"},
+          {code:"2.4",desc:"Estrategia Método RICE",percent:"20%",verif:"Pautas aplicadas",month:"Junio"},
+          {code:"2.5",desc:"Cuadernos de Caligrafix",percent:"10%",verif:"Cuadernos Caligrafix",month:"Junio"}
         ]
       },
       {
@@ -100,7 +100,7 @@
           {code:"3.1",desc:"Actualización plan altas expectativas",percent:"15%",verif:"Plan actualizado",month:"Abril"},
           {code:"3.2",desc:"Aplicación de encuestas",percent:"15%",verif:"Encuestas",month:"Mayo"},
           {code:"3.3",desc:"Socializar resultados de encuesta",percent:"20%",verif:"Informe resultados",month:"Junio"},
-          {code:"3.4",desc:"Implementación estrategias plan",percent:"30%",verif:"Registros eventos",month:"Noviembre"},
+          {code:"3.4",desc:"Implementación estrategias plan",percent:"30%",verif:"Registros eventos",month:"Junio"},
           {code:"3.5",desc:"Evaluación plan altas expectativas",percent:"20%",verif:"Informe evaluativo",month:"Diciembre"}
         ]
       },
@@ -110,8 +110,8 @@
         tasks:[
           {code:"4.1",desc:"Análisis resultados diagnóstico DIA",percent:"15%",verif:"Acta equipo directivo",month:"Abril"},
           {code:"4.2",desc:"Diseño plan acción según DIA",percent:"30%",verif:"Plan de acción",month:"Mayo"},
-          {code:"4.3",desc:"Implementación plan acción lenguaje",percent:"20%",verif:"Leccionario",month:"Noviembre"},
-          {code:"4.4",desc:"Implementación plan resolución números",percent:"20%",verif:"Leccionario",month:"Noviembre"},
+          {code:"4.3",desc:"Implementación plan acción lenguaje",percent:"20%",verif:"Leccionario",month:"Mayo"},
+          {code:"4.4",desc:"Implementación plan resolución números",percent:"20%",verif:"Leccionario",month:"Mayo"},
           {code:"4.5",desc:"Evaluación final DIA",percent:"15%",verif:"Informe final DIA",month:"Noviembre"}
         ]
       },
@@ -121,8 +121,8 @@
         tasks:[
           {code:"5.1",desc:"Actualización plan formación ciudadana",percent:"20%",verif:"Plan actualizado",month:"Abril"},
           {code:"5.2",desc:"Socializar ajustes de plan",percent:"15%",verif:"Acta socialización",month:"Mayo"},
-          {code:"5.3",desc:"Visitas patrimonios históricos",percent:"20%",verif:"Listas de asistencia",month:"Noviembre"},
-          {code:"5.4",desc:"Talleres sexualidad y género",percent:"30%",verif:"Listas y medios visuales",month:"Noviembre"},
+          {code:"5.3",desc:"Visitas patrimonios históricos",percent:"20%",verif:"Listas de asistencia",month:"Junio"},
+          {code:"5.4",desc:"Talleres sexualidad y género",percent:"30%",verif:"Listas y medios visuales",month:"Agosto"},
           {code:"5.5",desc:"Monitoreo y evaluación final",percent:"15%",verif:"Acta evaluación final",month:"Diciembre"}
         ]
       },
@@ -132,9 +132,9 @@
         tasks:[
           {code:"6.1",desc:"Actualización plan convivencia escolar",percent:"15%",verif:"Actas consejo escolar",month:"Abril"},
           {code:"6.2",desc:"Socializar cronograma actividades",percent:"15%",verif:"Acta reunión",month:"Junio"},
-          {code:"6.3",desc:"Implementación cronograma plan",percent:"30%",verif:"Registros participación",month:"Diciembre"},
+          {code:"6.3",desc:"Implementación cronograma plan",percent:"30%",verif:"Registros participación",month:"Junio"},
           {code:"6.4",desc:"Monitoreo cronograma",percent:"10%",verif:"Pauta monitoreo",month:"Octubre"},
-          {code:"6.5",desc:"Evaluación actividades resultados",percent:"30%",verif:"Acta evaluación",month:"Diciembre"}
+          {code:"6.5",desc:"Evaluación actividades resultados",percent:"30%",verif:"Acta evaluación",month:"Noviembre"}
         ]
       },
       {
@@ -142,9 +142,9 @@
         dimension:"Gestión de Recursos", sub:"Gestion personal y recursos educativos",
         tasks:[
           {code:"7.1",desc:"Levantamiento requerimientos",percent:"10%",verif:"Acta reunión",month:"Abril"},
-          {code:"7.2",desc:"Cronograma intervenciones",percent:"25%",verif:"Cronograma",month:"Noviembre"},
-          {code:"7.3",desc:"Implementación intervenciones",percent:"30%",verif:"Planificaciones/PPT",month:"Noviembre"},
-          {code:"7.4",desc:"Monitoreo cronograma",percent:"15%",verif:"Observaciones cronograma",month:"Noviembre"},
+          {code:"7.2",desc:"Cronograma intervenciones",percent:"25%",verif:"Cronograma",month:"Mayo"},
+          {code:"7.3",desc:"Implementación intervenciones",percent:"30%",verif:"Planificaciones/PPT",month:"Junio"},
+          {code:"7.4",desc:"Monitoreo cronograma",percent:"15%",verif:"Observaciones cronograma",month:"Julio"},
           {code:"7.5",desc:"Evaluación intervenciones",percent:"20%",verif:"Acta evaluación",month:"Diciembre"}
         ]
       },
@@ -153,8 +153,8 @@
         dimension:"Gestión de Recursos", sub:"Gestion personal y recursos educativos",
         tasks:[
           {code:"8.1",desc:"Levantamiento necesidades recursos",percent:"30%",verif:"Acta",month:"Abril"},
-          {code:"8.2",desc:"Solicitudes pedidos requerimientos",percent:"50%",verif:"Registros pedidos",month:"Diciembre"},
-          {code:"8.3",desc:"Bitácora mantenciones realizadas",percent:"20%",verif:"Bitácora registros",month:"Noviembre"}
+          {code:"8.2",desc:"Solicitudes pedidos requerimientos",percent:"50%",verif:"Registros pedidos",month:"Mayo"},
+          {code:"8.3",desc:"Bitácora mantenciones realizadas",percent:"20%",verif:"Bitácora registros",month:"Mayo"}
         ]
       }
     ];
